--- a/package.json
+++ b/package.json
@@ -10,9 +10,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "framer-motion": "^12.9.4",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "framer-motion": "^12.6.2",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "@react-three/drei": "9.36.0",
+    "@react-three/fiber": "8.8.10",
+    "@react-three/postprocessing": "2.7.0",
+    "@react-three/rapier": "0.8.2",
+    "three": "0.145.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.22.0",
